<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            tools:context=".MainActivity">


            <Button
                android:id="@+id/allJobs"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:onClick="allJobs"
                android:text="@string/allJobs"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/governmentJobs"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:onClick="governmentJobs"
                android:text="@string/governmentJobs"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/ngoJobs"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:onClick="ngoJobs"
                android:text="@string/ngoJobs"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/bankJobs"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:onClick="BankJobs"
                android:text="@string/bank_Jobs"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/teletalkApplication"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:onClick="teletalkApplication"
                android:text="@string/teletalkApplication"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/assignment"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:onClick="assignment"
                android:text="@string/assignment"
                android:textColor="@color/white" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>